--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -2,9 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #337ab7;
-  font-size: 16px;
-  font-family: 'Poppins', sans-serif;}
+  color: black;
+  font-size: 17px;
+  font-family: 'Poppins', sans-serif;
+}
 
 h2{
   font-family: 'Poppins', sans-serif;  font-size: 50px;
