--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   color: black;
-  font-size: 18px;
+  font-size: 17px;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -134,7 +134,7 @@ th, tr, td {
   border: none;
   padding: 5px;
   margin: 5px;
-  width: 110px;
+  width: 115px;
   border-radius: 5px;
   text-transform: uppercase;
   margin-top: 10px;
@@ -175,12 +175,23 @@ th, tr, td {
   color: #184267;
   font-size: 16px;
 }
+#table-container {
+  max-height: 70vh; /* Adjust height as needed */
+  overflow-y: auto;
+  width: 100%; /* Make it take up available space */
+}
+body {
+  display: flex;
+  flex-direction: row;
+}
   body{
     display: block;
 }
 
 .sidenav {
- 
+  position: fixed;
+  height: 100vh;
+  width: 200px; /* Adjust width as necessary */
   height: 160%;
   color: black;
   font-size: 14px;
@@ -611,7 +622,7 @@ input {
   display: block;
  
 }
-#btnEditPromo{
+#btnEdit{
   width: 100px;
   height: 30px;
   display: block;
