--- a/CSS/industries.css
+++ b/CSS/industries.css
@@ -881,3 +881,49 @@ input[type="text"], input[type="date"], textarea {
 #table {
   position: relative;
 }
+
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 600px; /* Full width */
+  height: 650px; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  font-family: 'Poppins', sans-serif;
+ color: #337ab7;
+ text-align: center;
+}
+
+.modal-content {
+  background-color: #337ab7;
+  margin: 55% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #184267;
+  font-family: 'Poppins', sans-serif;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.close {
+  color: #F4D160;
+  float: right;
+  font-size: 28px;
+
+
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+#confirmLogout{
+  color: black;
+  margin: 10px;
+
+  font-family: 'Poppins', sans-serif;
+
+}
