--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -14,7 +14,7 @@ h2{
 }
 
 .nav-pills > li > a {
-  color: #337ab7;
+  color: black;
 }
 
 .nav-pills > li.active > a, 
@@ -67,7 +67,7 @@ h2{
   outline: none;
 }
 .dropdown-container {
-  color: #1D5D9B;
+  color: #337ab7;
  
   display: none;
 }
@@ -133,7 +133,7 @@ table tr {
 }
 
 th, tr, td {
-  padding: 7px;
+  padding: 8px;
   text-align: left;
 }
 
@@ -141,11 +141,11 @@ th, tr, td {
   border: none;
   padding: 5px;
   margin: 5px;
-  width: 120px;
+  width: 110px;
   border-radius: 5px;
   text-transform: uppercase;
   margin-top: 10px;
-  margin-bottom: 10px;
+  
   font-size: 12px;
   background-color: rgb(223, 217, 217);
   cursor: pointer;
@@ -155,31 +155,25 @@ th, tr, td {
   display: flex;
 }
 .outer-wrapper {
-  display: flex;
-  flex-direction: column;
+  margin: 10px;
+  margin-left: -1px;
+  margin-right: 30px;
   width: 100%;
-  overflow-x: auto;
-  overflow-y: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  max-width: fit-content;
+  max-height: fit-content;
 }
 
-.table-wrapper {
-  width: 100%;
-  overflow-y: auto;
-  margin-bottom: 20px;
-}
 
 .con-lic, .con-mv {
   padding: 5px 10px;
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #1D5D9B;
+  color: #337ab7;
 }
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
-  color: #1D5D9B;
+  color: #337ab7;
 }
 .dropdown-container.show {
   display: block;
@@ -393,20 +387,22 @@ p
 th, tr, td{
     padding: 7px;
     text-align: left;
+    word-wrap: break-word; /* prevents long words from breaking layout */
+
 }
 
 #archived_acc{
-    border: none;
-    padding: 8px;
-    margin: 5px;
-    width: 130px;
-    border-radius: 5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color: black;
-    cursor: pointer;
+  border: none;
+  padding: 8px;
+  margin: 5px;
+  width: 130px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  color: black;
+  cursor: pointer;
 }
+
 tr th, tr th{
     background-color: gainsboro;
    
@@ -500,12 +496,11 @@ h4{
       
     }
     .table-wrapper {
-    
+      table-layout: auto;
       overflow-y: scroll;
       overflow-x: scroll;
       height: fit-content;
-      max-height: 66.4vh;
-      margin-top: 22px;
+      max-height: auto;
       margin: 15px;
       padding-bottom: 20px;
       
@@ -954,7 +949,6 @@ display: none;
   color: black;
   cursor: pointer;
 }
-
 
 .modal {
   display: none; /* Hidden by default */
