--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -65,7 +65,24 @@
   
 }
 
+#btnEditPromo{
+  width: 100px;
+  height: 30px;
+  display: block;
+  margin: 10px auto; 
+  padding: 5px 10px;
+  background-color: white;
+  color: #000000;
+  border: 5px;
+  border-radius: 15px;
+  font-size: 15px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+  margin-top: 30px;
 
+}
 
 .dropdown-btn {
 
@@ -936,4 +953,40 @@ input[type="text"], input[type="date"], textarea {
 
   font-family: 'Poppins', sans-serif;
 
+}
+
+.details-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.details-modal-content {
+  background-color: #337ab7;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.details-close {
+  color: #F4D160;
+  float: right;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.details-close:hover,
+.details-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
