--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -926,3 +926,39 @@ input[type="text"], input[type="date"], textarea {
   font-family: 'Poppins', sans-serif;
 
 }
+
+.details-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.details-modal-content {
+  background-color: #337ab7;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.details-close {
+  color: #F4D160;
+  float: right;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.details-close:hover,
+.details-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
