--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -37,8 +37,11 @@
 
 
 
-#visited i {
+
+#visited {
   margin-right: 8px; /* Space between icon and text */
+  font-size: 16px;
+  color: black;
 }
 
 /* Continue updating the rest */
@@ -60,12 +63,17 @@
 
 .card h4, .card p {
   color: black;
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+
 }
 
 .well {
   background-color: #337ab7;
   width: 890px;
   height: 500px;
+  font-family: 'Poppins', sans-serif;
   color: white;
 }
 
