--- a/CSS/dishes.css
+++ b/CSS/dishes.css
@@ -928,3 +928,91 @@ input[type="text"], input[type="date"], textarea {
   font-family: 'Poppins', sans-serif;
 
 }
+.details-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.details-modal-content {
+  background-color: #337ab7;
+  margin: 15% auto;
+  padding: 20px;
+  border: 5px  ;
+  border-radius: 15px;
+  color: white;
+  width: 50%;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  
+}
+#details-name, #details-description, #details-location {
+  color: white;
+  font-family: 'Poppins', sans-serif;
+}
+
+.details-close {
+  color: #F4D160;
+  float: right;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.details-close:hover,
+.details-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Add some basic CSS for the reviews modal */
+.modalRev {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-contentRev {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+}
+
+.close-reviews {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #aaa;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.reviews-container {
+  max-height: 400px;
+  overflow-y: auto;
+  margin-top: 20px;
+}
+
+.review {
+  margin-bottom: 15px;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+
