--- a/CSS/events.css
+++ b/CSS/events.css
@@ -120,9 +120,10 @@
 }
 
 
-
 table tr {
   padding: 4px;
+
+ 
 }
 
 th, tr, td {
@@ -874,8 +875,16 @@ input[type="text"], input[type="date"], textarea {
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bolder;
-  color: black;}
+  font-weight: bold;
+  color: #337ab7;  }
+
+  
+h2{
+  font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+    color: #337ab7;
+}
   
   /* Ensure the modal itself is not blurred */
 .modal {
@@ -1071,4 +1080,7 @@ input[type="text"], input[type="date"], textarea {
   padding: 10px;
   background-color: #f1f1f1;
   border-radius: 5px;
+}
+.blurred {
+  filter: blur(5px); /* Adjust the blur level as needed */
 }
