--- a/CSS/otop.css
+++ b/CSS/otop.css
@@ -864,8 +864,7 @@ input[type="text"], input[type="date"], textarea {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: black;}
-  
+  color: #337ab7;  }
   /* Ensure the modal itself is not blurred */
 .modal {
   position: fixed;
