--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -12,6 +12,11 @@ h2{
   font-weight: bolder;
   color: #337ab7;
 }
+#dash-logo {
+  font-family: 'Poppins', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #337ab7;  }
 
 .nav-pills > li > a {
   color: black;
