--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -892,7 +892,7 @@ input[type="text"], input[type="date"], textarea {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: black;}
+  color: #337ab7;  }
   
   /* Ensure the modal itself is not blurred */
 .modal {
@@ -1044,3 +1044,58 @@ input[type="text"], input[type="date"], textarea {
   border-radius: 5px;
 }
 
+
+
+.download-btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: whitesmoke;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+.qr-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.qr-modal-content {
+  background-color: #337ab7;
+  margin: 15% auto;
+  padding: 20px;
+  border: 5px  ;
+  border-radius: 15px;
+    
+  width: 50%;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+.qr-modal-content img {
+  width: 200px;
+  height: 200px;
+}
+.qr-close {
+  color: #F4D160;
+  float: right;
+  font-size: 14px;
+  font-weight: bold;
+}
+.qr-close:hover,
+.qr-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.download-btn:hover {
+  background-color: #F4D160;
+}
