--- a/CSS/rArchives.css
+++ b/CSS/rArchives.css
@@ -62,10 +62,10 @@
   align-items: center;
 }
 #dash-logo {
-  font-family: 'Poppins', sans-serif;  font-size: 35px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 35px;
   font-weight: bolder;
-  color: black;}
-  
+  color: #337ab7;  }
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
