--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -19,6 +19,11 @@ body {
     background-color: #24146C; 
     text-align: center;
 }
+#dash-logo {
+  font-family: 'Poppins', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #337ab7;  }
 
 .reg-container form {
     padding: 0 35px;
