--- a/CSS/archives.css
+++ b/CSS/archives.css
@@ -66,6 +66,8 @@
   font-size: 35px;
   font-weight: bolder;
   color: #337ab7;  }
+  
+  
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
@@ -133,7 +135,7 @@ th, tr, td {
   text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 10px;
- 
+ color: #000000;
   font-size: 11px; /* Adjusted font size */
   font-family: 'Poppins', sans-serif;
   background-color: rgb(223, 217, 217);
@@ -748,7 +750,6 @@ input {
 .btn{
     display: flex;
 }
-
 
 .modal {
   display: none; /* Hidden by default */
