--- a/CSS/events.css
+++ b/CSS/events.css
@@ -2,11 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: black;
+
   font-size: 17px;
   font-family: 'Poppins', sans-serif;
 }
+.see-details-btn{
+  background-color: whitesmoke;
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 5px;
+  border-color: #337ab7;
+  width: 100px;
+  font-size: 16px;
 
+}
 .row.content {
   height: 400px;
 }
@@ -367,10 +376,12 @@ h4{
   text-align: end;
   cursor: pointer;
 }
-.selected-row{
-  background-color: #337ab7 !important;
-  color: white;
+.selected-row {
+  background-color: #337ab7 !important; /* Ensures the background color is applied */
+  color: white !important; /* Ensures the text color is white */
+  
 }
+
 #srchText{
   outline: none;
   border: 1px solid grey;
