--- a/CSS/events.css
+++ b/CSS/events.css
@@ -886,9 +886,9 @@ input[type="text"], input[type="date"], textarea {
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bold;
-  color: #337ab7;  }
-
+  font-weight:800;
+  color: #337ab7;  
+}
   
 h2{
   font-family: 'Poppins', sans-serif;
