--- a/CSS/prArchives.css
+++ b/CSS/prArchives.css
@@ -65,8 +65,9 @@ Stephanie Bragas
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bolder;
-  color: #337ab7;  } 
+  font-weight:800;
+  color: #337ab7;  
+}
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
