--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -15,8 +15,9 @@ h2{
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bolder;
-  color: #337ab7;  }
+  font-weight:800;
+  color: #337ab7;  
+}
 
 .nav-pills > li > a {
   color: black;
