--- a/CSS/sArchives.css
+++ b/CSS/sArchives.css
@@ -64,8 +64,9 @@
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bolder;
-  color: #337ab7;  }
+  font-weight:800;
+  color: #337ab7;  
+}
    
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
