--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -873,8 +873,9 @@ input[type="text"], input[type="date"], textarea {
 #dash-logo {
   font-family: 'Poppins', sans-serif;
   font-size: 35px;
-  font-weight: bolder;
-  color: #337ab7;  }
+  font-weight:800;
+  color: #337ab7;  
+}
   
   /* Ensure the modal itself is not blurred */
 .modal {
