--- a/CSS/activities.css
+++ b/CSS/activities.css
@@ -2,11 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black;
+
     font-size: 17px;
     font-family: 'Poppins', sans-serif;
   }
+  .details-btn{
+    background-color: whitesmoke;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 5px;
+    border-color: #337ab7;
+    width: 100px;
+    font-size: 16px;
   
+  }
   .row.content {
     height: 400px;
   }
@@ -769,23 +778,6 @@
   } */
   
   
-  #delete_acc_modal{
-    width: 550px;
-    /* height: 200px; */
-    background-color: white;
-    user-select: none;
-    border: 1px solid #b3b3b3;
-    box-shadow: 5px 5px 5px rgb(70, 69, 69);
-    color: black;
-    padding: 20px;
-     visibility: hidden; 
-  
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 0.4s, top 0.4s;
-  }
   .cnfrm_modal{
     width: 550px;
     /* height: 200px; */
@@ -1008,8 +1000,9 @@
   
   .details-modal-content {
     background-color: #337ab7;
-    margin: 15% auto;
-    padding: 20px;
+    margin: 10% auto;
+    margin-top: 1%;
+    padding: 15px;
     border: 5px  ;
     border-radius: 15px;
     color: white;
