--- a/CSS/events.css
+++ b/CSS/events.css
@@ -25,6 +25,10 @@
 
 
 }
+tr.highlight {
+  background-color: #f0f8ff; /* Light blue highlight */
+}
+
 .sidenav h2, .sidenav a {
   color: white;
 }
@@ -780,38 +784,19 @@ label{
 } */
 
 
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-   visibility: hidden; 
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-}
 .cnfrm_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 600px; /* Full width */
+  height: 650px; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  font-family: 'Poppins', sans-serif;
+ color: #337ab7;
+ text-align: center;
 }
 .cnfrm_modal_add{
   width: 550px;
@@ -1019,8 +1004,9 @@ h2{
 
 .details-modal-content {
   background-color: #337ab7;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 10% auto;
+  margin-top: 1%;
+  padding: 15px;
   border: 5px  ;
   border-radius: 15px;
   color: white;
