--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -432,12 +432,13 @@ h4{
 #srchText{
   outline: none;
   border: 1px solid grey;
-  width: 350px;
+  width: 200px;
   height: 30px;
   font-size: 15px;
   align-items: end;
-  margin-left: auto;
+
   margin-top: 10px;
+  margin-left: 240px;
   border-radius: 5px;
   padding-left: 5px;
   text-transform: uppercase;
@@ -528,7 +529,7 @@ h4{
 
 /* popup modal for create account */
 .reg-container{
-  background-color: #1D5D9B;
+  background-color: #337ab7;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -543,7 +544,7 @@ h4{
 
 }
 .container-modal{
-  background-color: #1D5D9B;
+  background-color: #337ab7;
 }
 #email{
   text-align: start;
@@ -611,7 +612,7 @@ label{
 }
 /* popup modal for edit account */
 .edit-container{
-  background-color: #1D5D9B;
+  background-color: #337ab7;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -643,7 +644,7 @@ label{
 
 }
 .container-modal-edit{
-  background-color: #1D5D9B;
+  background-color: #337ab7;
 }
 #email1{
   text-align: start;
@@ -847,38 +848,8 @@ label{
   filter: blur(10px);
   user-select: none;
 } */
-.cnfrm_modal_delete{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
-}
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
-}
+
+
 .btn button{
 	padding: 4px;
 	width: 100px; 
@@ -892,35 +863,7 @@ label{
   background-color: var(--blueButton);
   color:white;
 }
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-display: none;
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-}
-#confirm_delete{
-  margin-left: 60%;
-}
-/* Add this CSS block to your existing CSS file */
-
-/* Style for the delete account modal */
-
-
-.cnfrm_modal h1, #delete_acc_modal h1{
-  letter-spacing: 3px;
-  text-align: center;
-}
 #cnl2{
   margin-left: 300px;
 }
