--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -141,7 +141,7 @@
 }
 
 .main-container {
-  overflow-y: auto;
+
   padding: 20px 20px;
 }
 
@@ -221,6 +221,7 @@ body {
   height: 160%;
   color: black;
   font-size: 14px;
+
 }
 @media screen and (max-width: 600px) {
   .column {
@@ -794,23 +795,7 @@ label{
 } */
 
 
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-   visibility: hidden; 
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-}
 .cnfrm_modal{
   width: 550px;
   /* height: 200px; */
@@ -980,8 +965,9 @@ input[type="text"], input[type="date"], textarea {
 
 .details-modal-content {
   background-color: #337ab7;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 10% auto;
+  margin-top: 1%;
+  padding: 15px;
   border: 5px  ;
   border-radius: 15px;
   color: white;
@@ -1079,7 +1065,7 @@ input[type="text"], input[type="date"], textarea {
   background-color: rgba(0, 0, 0, 0.4);
 }
 .qr-modal-content {
-  background-color: #337ab7;
+  background-color: WHITE;
   margin: 15% auto;
   padding: 20px;
   border: 5px  ;
